# CrossMap

./: .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  PKG-INFO  README.rst  ToDo.txt  pyproject.toml  setup.py
Cython-0.25.2-py2.7-macosx-10.12-intel.egg/EGG-INFO/: SOURCES.txt  entry_points.txt
chain_files/: readme.txt
data/UCSC_chain/: checksums.txt  readme.txt
doc/: README.rst  webpage.txt
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
lib/CrossMap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lib/cmmodule/: BED.py  PSL.py  SAM.py  annoGene.py  bgrMerge.py  changePoint.py  cigar.py  fasta.py  helpinfo.py  ireader.py  mapbam.py  mapbed.py  mapgff.py  mapgvcf.py  mapmaf.py  mapregion.py  mapvcf.py  mapwig.py  meta_data.py  mystat.py  quantile.py  sam_header.py  utils.py  wig_reader.py  wiggle.py
scripts/: a  chain_to_table.py  table
src/CrossMap.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cmmodule/: BED.py  __init__.py  mapbam.py  mapbed.py  (+6 more)
test/: 0_hg19.bed12  1_hg19.vcf  1_out.hg38.vcf  1_out.hg38.vcf.unmap  2_hg19.bam.bai  2_hg19.vcf  2_hg38.bam.bam  2_hg38.bam.sorted.bam  2_hg38.bam.sorted.bam.bai  3_hg19.bw  5_hg19.fixedStep.bw  5_hg19.fixedStep.wig  6_hg19.variableStep.bw  6_hg19.variableStep.wig  a  a.unmap  aa  b  bb  out  remove_comma.py  test.bed  test.sh  test00_hg19.bed3  test02_hg19.vcf  test03_hg19.bam  test04_hg19.noChr.bigwig  test05_hg19.bedGraph  test06_hg19.fixedStep.wig  test07_hg19.variableStep.wig  test08_hg19.gtf  test10_hg19.gvcf  test11_hg19_region.bed
(+36 files in other folders)
